--- a/sass/modules/_navbar.scss
+++ b/sass/modules/_navbar.scss
@@ -41,43 +41,6 @@
         .input-group {
             margin: 0;
         }
-
-        .nav-default {
-            li {
-                a {
-                    padding-left: .5em;
-                    padding-right: .5em;
-                }
-            }
-            > li {
-                display: block;
-                float: none;
-                padding: 0;
-
-                > a {
-                    border-color: transparent !important;
-                    cursor: pointer;
-                }
-            }
-            @include from(4) {
-                li {
-                    a {
-                        padding-left: .5em;
-                        padding-right: .5em;
-                    }
-                }
-                > li {
-                    padding: 0 .5em;
-                    > a {
-                        padding-left: 0px;
-                        padding-right: 0px;
-                    }
-                }
-            }
-            &.nav-justified > li {
-                width: auto;
-            }
-        }
     }
 
     .marker {
