--- a/sass/theme/_theme_colors.scss
+++ b/sass/theme/_theme_colors.scss
@@ -379,6 +379,11 @@ hr {
             }
         }
     }
+    > li {
+        > a {
+            border-color: transparent !important;
+        }
+    }
 }
 
 .nav .dropdown-menu,
